--- a/views/dynblocks/mainmenu.conf
+++ b/views/dynblocks/mainmenu.conf
@@ -16,6 +16,10 @@ return [
             'title' => 'Контакты',
             'url' => '/kontakty/',
         ],
+        [
+            'title' => 'Внешняя ссылка',
+            'url' => 'http://mtm10.ru',
+        ],
     ],
     '__block' => [
         'widgetId' => 'menu',
