--- a/views/dynblocks/dropdownmenu.conf
+++ b/views/dynblocks/dropdownmenu.conf
@@ -1,5 +1,36 @@
 <?php
 return [
+    'items' => [
+        1 => [
+            'label' => 'Главная',
+            'url' => '#',
+            'items' => [
+                [
+                    'label' => 'Услуги',
+                    'url' => '/uslugi/',
+                ],
+                [
+                    'label' => 'Контакты',
+                    'url' => '/kontakty/',
+                ],
+            ],
+        ],
+        4 => [
+            'label' => 'Дополнительная информация',
+            'url' => '#',
+            'items' => [
+                [
+                    'label' => 'Галерея',
+                    'url' => '/galereya/',
+                ],
+            ],
+        ],
+        6 => [
+            'label' => 'тест',
+            'url' => '/test/',
+        ],
+    ],
+    'appearance' => 'nav-tabs',
     '__block' => [
         'widgetId' => 'dropdown-menu',
         'comment' => 'Главное меню',
