Final version of dropdown menu

--- a/views/dynblocks/dropdownmenu.conf
+++ b/views/dynblocks/dropdownmenu.conf
@@ -3,31 +3,41 @@ return [
     'items' => [
         1 => [
             'label' => 'Главная',
-            'url' => '#',
+            'url' => '/',
             'items' => [
                 [
                     'label' => 'Услуги',
-                    'url' => '/uslugi/',
-                ],
-                [
-                    'label' => 'Контакты',
-                    'url' => '/kontakty/',
+                    'url' => '/uslugi/uslugi/',
                 ],
             ],
         ],
-        4 => [
+        2 => [
             'label' => 'Дополнительная информация',
-            'url' => '#',
+            'url' => '/dopolnitelnaya-informaciya/',
             'items' => [
                 [
-                    'label' => 'Галерея',
-                    'url' => '/galereya/',
+                    'label' => 'Слайдшоу',
+                    'url' => '/galereya/slajdshou/',
+                ],
+                [
+                    'label' => 'Контактная информация',
+                    'url' => '/kontakty/kontaktnaya-informaciya/',
                 ],
             ],
         ],
-        6 => [
-            'label' => 'тест',
-            'url' => '/test/',
+        3 => [
+            'label' => 'Галерея',
+            'url' => '/galereya/',
+            'items' => [
+                [
+                    'label' => 'Дополнительная информация',
+                    'url' => '/dopolnitelnaya-informaciya/',
+                ],
+                [
+                    'label' => 'Варианты доменного имени',
+                    'url' => '/dopolnitelnaya-informaciya/varianty-domennogo-imeni/',
+                ],
+            ],
         ],
     ],
     'appearance' => 'nav-tabs',
